fix db connection

--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -6,6 +6,7 @@ mysqluser = "root"
 mysqlpass = "root"
 mysqlurls = "127.0.0.1"
 mysqldb   = "bhg_main"
+mysqlport   = 3306
 maxIdleCons = 1000
 maxOpenCons = 1000
 
